retrieveUnpackaged/objects/WELLogSetting__mdt.object
<CustomObject>
    <fields>
        <fullName>Enabled__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Logging_Level_API__c</fullName>
        <description>Define the logging level upper limit to be persisted into API.</description>
        <label>Logging Level API</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>NONE</fullName>
                    <default>true</default>
                    <label>NONE</label>
                </value>
                <value>
                    <fullName>ERROR</fullName>
                </value>
                <value>
                    <fullName>WARN</fullName>
                </value>
                <value>
                    <fullName>INFO</fullName>
                </value>
                <value>
                    <fullName>DEBUG</fullName>
                </value>
                <value>
                    <fullName>FINE</fullName>
                </value>
                <value>
                    <fullName>FINER</fullName>
                </value>
                <value>
                    <fullName>FINEST</fullName>
                </value>
                <value>
                    <fullName>FINE,</fullName>
                    <isActive>false</isActive>
                    <label>FINE,</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Logging_Level_Database__c</fullName>
        <description>Define the logging level upper limit to be persisted into database.</description>
        <label>Logging Level Database</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>NONE</fullName>
                    <default>true</default>
                    <label>NONE</label>
                </value>
                <value>
                    <fullName>ERROR</fullName>
                </value>
                <value>
                    <fullName>WARN</fullName>
                </value>
                <value>
                    <fullName>INFO</fullName>
                </value>
                <value>
                    <fullName>DEBUG</fullName>
                </value>
                <value>
                    <fullName>FINE</fullName>
                </value>
                <value>
                    <fullName>FINER</fullName>
                </value>
                <value>
                    <fullName>FINEST</fullName>
                </value>
                <value>
                    <fullName>FINE,</fullName>
                    <isActive>false</isActive>
                    <label>FINE,</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Logging_Level_Debug__c</fullName>
        <description>Define the logging level upper limit to be persisted into Salesforce Debug Log.</description>
        <label>Logging Level Debug</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>NONE</fullName>
                    <default>true</default>
                    <label>NONE</label>
                </value>
                <value>
                    <fullName>ERROR</fullName>
                </value>
                <value>
                    <fullName>WARN</fullName>
                </value>
                <value>
                    <fullName>INFO</fullName>
                </value>
                <value>
                    <fullName>DEBUG</fullName>
                </value>
                <value>
                    <fullName>FINE</fullName>
                </value>
                <value>
                    <fullName>FINER</fullName>
                </value>
                <value>
                    <fullName>FINEST</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>WELLog Setting</label>
    <listViews>
        <fullName>All_Fields</fullName>
        <columns>MasterLabel</columns>
        <columns>Enabled__c</columns>
        <columns>Logging_Level_Database__c</columns>
        <columns>Logging_Level_Debug__c</columns>
        <columns>Logging_Level_API__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Fields</label>
    </listViews>
    <pluralLabel>WELLog Settings</pluralLabel>
</CustomObject>